// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Chip 1`] = `
<div
  className="chip"
>
  Foo
</div>
`;

exports[`renders a loud Chip 1`] = `
<div
  className="chip bold"
>
  Foo
</div>
`;
